css: prevent scrollbars on image with title with math underscore
Also prevent unnecessary scrollbars on 100% width images and videos
due to borders. On videos borders come from YouTube I think, and on
images they could come from the border argument.

The image title and description is now outside of the x scrollbar element,
which makes more sense as these can wrap, and works like code. The x
scrollbar appears only on the image itself.

--- a/ourbigbook.scss
+++ b/ourbigbook.scss
@@ -10,9 +10,17 @@
 @font-face { font-family: fa-regular-400; src: url(node_modules/@fortawesome/fontawesome-free/webfonts/fa-regular-400.woff2); }
 @font-face { font-family: fa-solid-900; src: url(node_modules/@fortawesome/fontawesome-free/webfonts/fa-solid-900.woff2); }
 
-$caption-margin-bottom: 5px;
+$caption-margin-bottom: 7px;
 $p-margin-vert: 14px;
 $toplevel-horizontal-padding-mobile: 5px;
+
+// Wraps "floating elements" such as images, so ensure they will not create a global scrollbar.
+// Related issue: https://docs.ourbigbook.com/todo/vertical-scrollbar-when-image-title-contains-math-underscore
+div.float-wrap {
+  display: inline-block;
+  overflow-x: auto;
+  width: 100%;
+}
 
 @mixin hidden {
   display: none;
@@ -31,6 +39,7 @@ $toplevel-horizontal-padding-mobile: 5px;
 
 @mixin img-border {
   border: 5px solid $color;
+  box-sizing: border-box;
 }
 
 @mixin multiline-caption {
@@ -152,7 +161,6 @@ div.p {
 // Figures.
 figure {
   margin: $p-margin-vert 0;
-  overflow-x: auto;
   &.multiline-caption {
     @include multiline-caption;
   }
@@ -228,6 +236,7 @@ nav {
 
 iframe {
   @include responsive-img;
+  box-sizing: border-box;
   &.border {
     @include img-border;
   }
@@ -235,7 +244,8 @@ iframe {
 
 // Math.
 // https://stackoverflow.com/questions/50896041/katex-font-size/57355836#57355836
-.katex { font-size: 1.2em; }
+.katex {
+font-size: 1.2em; }
 // Make block math larger, otherwise fractions and other tall constructs become tiny.
 // Users should avoid tall constructs inline.
 .math { .katex { font-size: 1.5em; } }
